# Codes

./: 1.docx  12.01  12.01.2026  14.0  21.01  28.01  C++ code  PayrollApp.pro  Pflfybt 1.cpp  c++ code  c++ functions1  c++ recursive  c++ st  c++ Домашняя работа  c++ работа  c++ указатели  c++5  c++p  c++strokes  c+recurs  calculator_service.py  cpp acode  employeedialog.cpp  employeedialog.h  employeedialog.ui  files  functions c++  homew  logindialog.h  logindialog.ui  mainwindow.cpp  mainwindow.h  massives c  method  method kutta  numerical  python file  python smallhouse  python методы  python числ методы  (+17 more)
Pyth/: black_box_tester.py  fixed_calculator.py  Домашняя работа.docx
QtProjects/option12/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
QtProjects/option22/: CMakeLists.txt
c++ codes/: C++ задание  Pflfybt 1.cpp  c+ dz  c++ c  c++ funcc  c++ masiv  c++ ukazateli  c++ домашняя работа  c++ задaние  c++code  cpp code  dz  enum  file  functions c  homewo  langC  num methods  python method  python new  python peregruzka  razrabotka modul  stru  structtt  tower  Задание типы данных  Численные методы  задание 2.cpp  задание 4.cpp  по c++
code/: logindialog.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  models.h
ff/: task1  task2  task3  task4  task5
matrix_sum/: mainwindow.cpp  mainwindow.h  mainwindow.ui
num metthods/: numm method  метод 2  метод сплайном - 1
p/: logindialog.cpp  main.cpp  mainwindow.ui  models.h
practice p/: buggy_calculator.py
project/: func  main.cpp  struct  task_functions.cpp  task_operations.h  task_struct.h  (+1 more)
(+232 files in other folders)
